[package]
name = "async"
version = "0.1.0"
authors = ["Arnav <arnav.jindal7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dagpirs = {path = "../../dagpirs"}

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]